[GGC-337] fix stamps in Top getting too close to press logos

--- a/src/containers/top/Top.css
+++ b/src/containers/top/Top.css
@@ -116,7 +116,7 @@
   display: flex;
   flex-direction: column;
   position: absolute;
-  top: 40%;
+  bottom: 23%;
   right: 0%;
 }
 
